--- a/chatopia-copy/package.json
+++ b/chatopia-copy/package.json
@@ -10,32 +10,27 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
-    "@hookform/resolvers": "^3.4.2",
-    "@neondatabase/serverless": "^0.9.3",
-    "@prisma/adapter-neon": "^5.14.0",
-    "@prisma/client": "^5.4.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.12.0",
     "axios": "^1.7.2",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "ws": "^8.17.0"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "prisma": "^5.4.2",
+    "prisma": "^5.14.0",
     "typescript": "^5"
   }
 }
