--- a/chatopia/.env
+++ b/chatopia/.env
@@ -1,13 +1,13 @@
-# DATABASE_URL="postgresql://postgres:postg-sql@leo-pa55word@localhost:5432/chatopia?schema=public"
+DATABASE_URL="postgresql://postgres:postg-sql@leo-pa55word@localhost:5432/chatopia?schema=public"
 
-POSTGRES_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech"
-POSTGRES_PASSWORD="K3oNwQOGes5D"
-POSTGRES_DATABASE="verceldb"
+# POSTGRES_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_PRISMA_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NO_SSL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+# POSTGRES_URL_NON_POOLING="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech"
+# POSTGRES_PASSWORD="K3oNwQOGes5D"
+# POSTGRES_DATABASE="verceldb"
 
 AUTH_SECRET="FYeyLUAdAvKcKuz6EZth/j3G2Hy5fUumF9VhuOxy0A4="
 # NEXTAUTH_SECRET="NEXTAUTH_SECRET"
