--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "next-superjson-plugin": "^0.6.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
