--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
