--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "next-cloudinary": "^6.6.2",
     "next-superjson-plugin": "^0.6.3",
     "react": "^18",
     "react-dom": "^18",
