--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
