--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^2.0.4",
     "@hookform/resolvers": "^3.4.2",
     "@neondatabase/serverless": "^0.9.3",
@@ -20,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "emoji-mart": "^5.6.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-cloudinary": "^6.6.2",
