--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -2,11 +2,13 @@
   "name": "chatopia",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
@@ -20,9 +22,12 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
+    "lodash": "^4.17.21",
+    "micro-cors": "^0.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-cloudinary": "^6.6.2",
@@ -34,16 +39,20 @@
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "nodemon": "^3.1.4",
     "prisma": "^5.14.0",
     "typescript": "^5"
   }
