--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^5.0.0-beta.18",
     "next-cloudinary": "^6.6.2",
     "next-superjson-plugin": "^0.6.3",
+    "primereact": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
