--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -40,8 +40,10 @@
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-toggle-dark-mode": "^1.1.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "use-local-storage": "^3.0.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
