--- a/chatopia/.env
+++ b/chatopia/.env
@@ -11,10 +11,11 @@ DATABASE_URL="postgresql://postgres:postg-sql@leo-pa55word@localhost:5432/chatop
 
 AUTH_SECRET="FYeyLUAdAvKcKuz6EZth/j3G2Hy5fUumF9VhuOxy0A4="
 # NEXTAUTH_SECRET="NEXTAUTH_SECRET"
-
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="wuuk33fv"
+CLOUDINARY_URL="cloudinary://721888245249955:cyp8tdd1koRbVrhEuhQ13eR05Pc@dtygxemgj"
 
 AUTH_GITHUB_ID="Ov23li8sGYEYkjxaPtcK"
 AUTH_GITHUB_SECRET="69cb0f8249dddcc06bd9398d670f7d18c7f82ccc"
 
-AUTH_GOOGLE_ID=
-AUTH_GOOGLE_SECRET=
+AUTH_GOOGLE_ID="269471095636-4ju96e41179oqfoe8e368bqv23luti41.apps.googleusercontent.com"
+AUTH_GOOGLE_SECRET="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"
