--- a/chatopia/package.json
+++ b/chatopia/package.json
@@ -44,7 +44,8 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "use-local-storage": "^3.0.0",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
