--- a/chatopia/.env
+++ b/chatopia/.env
@@ -1,21 +1,12 @@
-DATABASE_URL="postgresql://postgres:postg-sql@leo-pa55word@localhost:5432/chatopia?schema=public"
-
-# POSTGRES_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-# POSTGRES_PRISMA_URL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-# POSTGRES_URL_NO_SSL="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
-# POSTGRES_URL_NON_POOLING="postgres://default:K3oNwQOGes5D@ep-floral-pine-a1sgy52s.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-# POSTGRES_USER="default"
-# POSTGRES_HOST="ep-floral-pine-a1sgy52s-pooler.ap-southeast-1.aws.neon.tech"
-# POSTGRES_PASSWORD="K3oNwQOGes5D"
-# POSTGRES_DATABASE="verceldb"
+DATABASE_URL="postgresql://postgres:username@password@localhost:port/db_name?schema=public"
 
 AUTH_SECRET="FYeyLUAdAvKcKuz6EZth/j3G2Hy5fUumF9VhuOxy0A4="
-# NEXTAUTH_SECRET="NEXTAUTH_SECRET"
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="wuuk33fv"
-CLOUDINARY_URL="cloudinary://721888245249955:cyp8tdd1koRbVrhEuhQ13eR05Pc@dtygxemgj"
 
-AUTH_GITHUB_ID="Ov23li8sGYEYkjxaPtcK"
-AUTH_GITHUB_SECRET="69cb0f8249dddcc06bd9398d670f7d18c7f82ccc"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_URL=""
 
-AUTH_GOOGLE_ID="269471095636-4ju96e41179oqfoe8e368bqv23luti41.apps.googleusercontent.com"
-AUTH_GOOGLE_SECRET="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"
+AUTH_GITHUB_ID=""
+AUTH_GITHUB_SECRET=""
+
+AUTH_GOOGLE_ID=""
+AUTH_GOOGLE_SECRET=""
